Revert "BAU: Move CRI return lambdas to a step function"
This reverts commit e357d93882f9a5ad7ec8e450755f530814754eaa.