@@ -1,14 +1,17 @@
 package uk.gov.di.ipv.core.processjourneystep;
 
 import com.amazonaws.services.lambda.runtime.Context;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.nimbusds.oauth2.sdk.OAuth2Error;
-import org.apache.http.HttpStatus;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import uk.gov.di.ipv.core.library.domain.ApiGatewayTemplateMappingInput;
+import uk.gov.di.ipv.core.library.domain.ApiGatewayTemplateMappingOutput;
 import uk.gov.di.ipv.core.library.domain.ErrorResponse;
 import uk.gov.di.ipv.core.library.dto.ClientSessionDetailsDto;
 import uk.gov.di.ipv.core.library.helpers.SecureTokenHelper;
@@ -18,7 +21,12 @@ import uk.gov.di.ipv.core.library.service.IpvSessionService;
 import uk.gov.di.ipv.core.processjourneystep.statemachine.StateMachine;
 import uk.gov.di.ipv.core.processjourneystep.statemachine.StateMachineInitializer;
 
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
 import java.time.Instant;
+import java.util.Collections;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -26,16 +34,12 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.di.ipv.core.library.config.ConfigurationVariable.BACKEND_SESSION_TIMEOUT;
-import static uk.gov.di.ipv.core.library.helpers.StepFunctionHelpers.CODE;
-import static uk.gov.di.ipv.core.library.helpers.StepFunctionHelpers.IPV_SESSION_ID;
-import static uk.gov.di.ipv.core.library.helpers.StepFunctionHelpers.JOURNEY;
-import static uk.gov.di.ipv.core.library.helpers.StepFunctionHelpers.MESSAGE;
-import static uk.gov.di.ipv.core.library.helpers.StepFunctionHelpers.STATUS_CODE;
 
 @ExtendWith(MockitoExtension.class)
 class ProcessJourneyStepHandlerTest {
+    private static final String JOURNEY_STEP = "journeyStep";
     private static final String FAIL = "fail";
-    private static final String NEXT = "/journey/next";
+    private static final String NEXT = "next";
     private static final String ERROR = "error";
     private static final String ACCESS_DENIED = "access-denied";
     private static final String INVALID_STEP = "invalid-step";
@@ -78,6 +82,8 @@ class ProcessJourneyStepHandlerTest {
     @Mock private ConfigurationService mockConfigurationService;
 
     private ProcessJourneyStepHandler processJourneyStepHandler;
+    private final ObjectMapper objectMapper = new ObjectMapper();
+
     private ClientSessionDetailsDto clientSessionDetailsDto;
 
     @BeforeEach
@@ -90,75 +96,190 @@ class ProcessJourneyStepHandlerTest {
     }
 
     @Test
-    void shouldReturn400OnMissingJourneyStep() {
-        Map<String, String> input = Map.of(IPV_SESSION_ID, "1234");
+    void shouldReturn400OnMissingParams() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Collections.emptyMap(),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
 
-        assertEquals(HttpStatus.SC_BAD_REQUEST, output.get(STATUS_CODE));
-        assertEquals(ErrorResponse.MISSING_JOURNEY_STEP.getCode(), output.get(CODE));
-        assertEquals(ErrorResponse.MISSING_JOURNEY_STEP.getMessage(), output.get(MESSAGE));
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+
+        assertEquals(400, lambdaOutput.getStatusCode());
+        assertEquals(
+                ErrorResponse.MISSING_JOURNEY_STEP_URL_PATH_PARAM.getCode(),
+                outputBody.get("code"));
+        assertEquals(
+                ErrorResponse.MISSING_JOURNEY_STEP_URL_PATH_PARAM.getMessage(),
+                outputBody.get("message"));
     }
 
     @Test
-    void shouldReturn400OnMissingJourneyStepParam() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT);
+    void shouldReturn400OnMissingJourneyStepParam() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of("InvalidStep", "any"),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
 
-        assertEquals(HttpStatus.SC_BAD_REQUEST, output.get(STATUS_CODE));
-        assertEquals(ErrorResponse.MISSING_IPV_SESSION_ID.getCode(), output.get(CODE));
-        assertEquals(ErrorResponse.MISSING_IPV_SESSION_ID.getMessage(), output.get(MESSAGE));
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+
+        assertEquals(400, lambdaOutput.getStatusCode());
+        assertEquals(
+                ErrorResponse.MISSING_JOURNEY_STEP_URL_PATH_PARAM.getCode(),
+                outputBody.get("code"));
+        assertEquals(
+                ErrorResponse.MISSING_JOURNEY_STEP_URL_PATH_PARAM.getMessage(),
+                outputBody.get("message"));
     }
 
     @Test
-    void shouldReturn400WhenInvalidSessionIdProvided() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturn400OnMissingIpvSessionIdHeader() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Collections.emptyMap(),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+
+        assertEquals(400, lambdaOutput.getStatusCode());
+        assertEquals(ErrorResponse.MISSING_IPV_SESSION_ID.getCode(), outputBody.get("error"));
+        assertEquals(
+                ErrorResponse.MISSING_IPV_SESSION_ID.getMessage(),
+                outputBody.get("error_description"));
+    }
+
+    @Test
+    void shouldReturn400WhenInvalidSessionIdProvided() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         when(mockIpvSessionService.getIpvSession("1234")).thenReturn(null);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
 
-        assertEquals(HttpStatus.SC_BAD_REQUEST, output.get(STATUS_CODE));
-        assertEquals(ErrorResponse.INVALID_SESSION_ID.getCode(), output.get(CODE));
-        assertEquals(ErrorResponse.INVALID_SESSION_ID.getMessage(), output.get(MESSAGE));
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+
+        assertEquals(400, lambdaOutput.getStatusCode());
+        assertEquals(ErrorResponse.INVALID_SESSION_ID.getCode(), outputBody.get("code"));
+        assertEquals(ErrorResponse.INVALID_SESSION_ID.getMessage(), outputBody.get("message"));
     }
 
     @Test
-    void shouldReturn500WhenUnknownJourneyEngineStepProvided() {
-        Map<String, String> input = Map.of(JOURNEY, INVALID_STEP, IPV_SESSION_ID, "1234");
+    void shouldReturn500WhenUnknownJourneyEngineStepProvided() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, INVALID_STEP),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(INITIAL_IPV_JOURNEY_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
 
-        assertEquals(HttpStatus.SC_INTERNAL_SERVER_ERROR, output.get(STATUS_CODE));
-        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getCode(), output.get(CODE));
-        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getMessage(), output.get(MESSAGE));
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+
+        assertEquals(500, lambdaOutput.getStatusCode());
+        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getCode(), outputBody.get("code"));
+        assertEquals(
+                ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getMessage(), outputBody.get("message"));
     }
 
     @Test
-    void shouldReturn500WhenUserIsInUnknownState() {
-        Map<String, String> input = Map.of(JOURNEY, INVALID_STEP, IPV_SESSION_ID, "1234");
+    void shouldReturn500WhenUserIsInUnknownState() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout("INVALID-STATE");
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
 
-        assertEquals(HttpStatus.SC_INTERNAL_SERVER_ERROR, output.get(STATUS_CODE));
-        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getCode(), output.get(CODE));
-        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getMessage(), output.get(MESSAGE));
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+
+        assertEquals(500, lambdaOutput.getStatusCode());
+        assertEquals(ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getCode(), outputBody.get("code"));
+        assertEquals(
+                ErrorResponse.FAILED_JOURNEY_ENGINE_STEP.getMessage(), outputBody.get("message"));
     }
 
     @Test
-    void shouldReturnIdentityStartPageResponseWhenRequired() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnIdentityStartPageResponseWhenRequired() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(INITIAL_IPV_JOURNEY_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
 
-        assertEquals(IPV_IDENTITY_START_PAGE, output.get("page"));
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
+
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(IPV_IDENTITY_START_PAGE, outputBody.get("page"));
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -168,28 +289,55 @@ class ProcessJourneyStepHandlerTest {
     }
 
     @Test
-    void shouldReturnEvaluateGpg45ScoresWhenIpvIdentityStartPageState() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnEvaluateGpg45ScoresWhenIpvIdentityStartPageState() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(IPV_IDENTITY_START_PAGE_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(EVALUATE_GPG45_SCORES, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(JOURNEY_EVALUATE_GPG_45_SCORES, output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(JOURNEY_EVALUATE_GPG_45_SCORES, outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriUkPassportState() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriUkPassportState() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(CRI_UK_PASSPORT_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -197,32 +345,60 @@ class ProcessJourneyStepHandlerTest {
         assertEquals(
                 RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnCriErrorPageResponseIfPassportCriFails() {
-        Map<String, String> input = Map.of(JOURNEY, ERROR, IPV_SESSION_ID, "1234");
+    void shouldReturnCriErrorPageResponseIfPassportCriFails() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, ERROR),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(CRI_UK_PASSPORT_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_ERROR_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriAddressState() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriAddressState() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(CRI_ADDRESS_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -230,28 +406,50 @@ class ProcessJourneyStepHandlerTest {
         assertEquals(
                 RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnRetrieveCriCredentialsWhenValidateOAuthCallback() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnRetrieveCriCredentialsWhenValidateOAuthCallback() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(RETRIEVE_CRI_OAUTH_ACCESS_TOKEN);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(RETRIEVE_CRI_CREDENTIAL, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(JOURNEY_RETRIEVE_CRI_CREDENTIAL, output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(JOURNEY_RETRIEVE_CRI_CREDENTIAL, outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnCriErrorPageResponseIfAddressCriFails() {
-        Map<String, String> input = Map.of(JOURNEY, ERROR, IPV_SESSION_ID, "1234");
+    void shouldReturnCriErrorPageResponseIfAddressCriFails() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, ERROR),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         IpvSessionItem ipvSessionItem = new IpvSessionItem();
         ipvSessionItem.setIpvSessionId(SecureTokenHelper.generate());
@@ -262,19 +460,33 @@ class ProcessJourneyStepHandlerTest {
         when(mockIpvSessionService.getIpvSession(anyString())).thenReturn(ipvSessionItem);
         when(mockConfigurationService.getSsmParameter(BACKEND_SESSION_TIMEOUT)).thenReturn("7200");
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_ERROR_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriFraudState() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriFraudState() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         IpvSessionItem ipvSessionItem = new IpvSessionItem();
         ipvSessionItem.setIpvSessionId(SecureTokenHelper.generate());
@@ -285,7 +497,13 @@ class ProcessJourneyStepHandlerTest {
         when(mockIpvSessionService.getIpvSession(anyString())).thenReturn(ipvSessionItem);
         when(mockConfigurationService.getSsmParameter(BACKEND_SESSION_TIMEOUT)).thenReturn("7200");
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -293,19 +511,30 @@ class ProcessJourneyStepHandlerTest {
         assertEquals(
                 RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnPreKbvTransitionPageResponseWhenRequired() {
-        Map<String, String> input =
-                Map.of(
-                        JOURNEY, "kbv",
-                        IPV_SESSION_ID, "1234");
+    void shouldReturnPreKbvTransitionPageResponseWhenRequired() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, "kbv"),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(SELECT_CRI_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -313,28 +542,50 @@ class ProcessJourneyStepHandlerTest {
         assertEquals(
                 PRE_KBV_TRANSITION_PAGE_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(PRE_KBV_TRANSITION_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PRE_KBV_TRANSITION_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnCriKbvJourneyResponseWhenRequired() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnCriKbvJourneyResponseWhenRequired() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(PRE_KBV_TRANSITION_PAGE_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_KBV_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals("/journey/cri/build-oauth-request/kbv", output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals("/journey/cri/build-oauth-request/kbv", outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnCriErrorPageResponseIfFraudCriFails() {
-        Map<String, String> input = Map.of(JOURNEY, ERROR, IPV_SESSION_ID, "1234");
+    void shouldReturnCriErrorPageResponseIfFraudCriFails() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, ERROR),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         IpvSessionItem ipvSessionItem = new IpvSessionItem();
         ipvSessionItem.setIpvSessionId(SecureTokenHelper.generate());
@@ -345,23 +596,43 @@ class ProcessJourneyStepHandlerTest {
         when(mockIpvSessionService.getIpvSession(anyString())).thenReturn(ipvSessionItem);
         when(mockConfigurationService.getSsmParameter(BACKEND_SESSION_TIMEOUT)).thenReturn("7200");
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_ERROR_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriKbvState() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnRetrieveCriOAuthAccessTokenWhenCriKbvState() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(CRI_KBV_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -369,204 +640,382 @@ class ProcessJourneyStepHandlerTest {
         assertEquals(
                 RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(JOURNEY_RETRIEVE_CRI_OAUTH_ACCESS_TOKEN, outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnEvaluateGpg45ScoresWhenRetrieveCriCredentialState() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnEvaluateGpg45ScoresWhenRetrieveCriCredentialState() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(RETRIEVE_CRI_CREDENTIAL);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(EVALUATE_GPG45_SCORES, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(JOURNEY_EVALUATE_GPG_45_SCORES, output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(JOURNEY_EVALUATE_GPG_45_SCORES, outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnCriErrorPageResponseIfKbvCriFails() {
-        Map<String, String> input = Map.of(JOURNEY, ERROR, IPV_SESSION_ID, "1234");
+    void shouldReturnCriErrorPageResponseIfKbvCriFails() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, ERROR),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(CRI_KBV_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_ERROR_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnEndSessionJourneyResponseWhenRequired() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnEndSessionJourneyResponseWhenRequired() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(IPV_SUCCESS_PAGE_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(END_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals("/journey/build-client-oauth-response", output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals("/journey/build-client-oauth-response", outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnDebugEvaluateGpg45ScoresJourneyWhenRequired() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnDebugEvaluateGpg45ScoresJourneyWhenRequired() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(DEBUG_RETRIEVE_CRI_CREDENTIAL_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(DEBUG_EVALUATE_GPG45_SCORES, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals("/journey/evaluate-gpg45-scores", output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals("/journey/evaluate-gpg45-scores", outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnPYITechnicalPageIfErrorOccursOnDebugJourney() {
-        Map<String, String> input = Map.of(JOURNEY, ERROR, IPV_SESSION_ID, "1234");
+    void shouldReturnPYITechnicalPageIfErrorOccursOnDebugJourney() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, ERROR),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(DEBUG_PAGE_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(CRI_ERROR_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnPYINoMatchPageIfErrorOccursOnDebugJourney() {
-        Map<String, String> input = Map.of(JOURNEY, FAIL, IPV_SESSION_ID, "1234");
+    void shouldReturnPYINoMatchPageIfErrorOccursOnDebugJourney() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, FAIL),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(DEBUG_PAGE_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(PYI_NO_MATCH_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(PYI_NO_MATCH_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PYI_NO_MATCH_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnErrorPageResponseWhenRequired() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnErrorPageResponseWhenRequired() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(CRI_ERROR_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(END_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals("/journey/build-client-oauth-response", output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals("/journey/build-client-oauth-response", outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnPYINoMatchPageIfPassportCriVCValidationReturnsFail() {
-        Map<String, String> input = Map.of(JOURNEY, FAIL, IPV_SESSION_ID, "1234");
+    void shouldReturnPYINoMatchPageIfPassportCriVCValidationReturnsFail() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, FAIL),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(CRI_UK_PASSPORT_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(PYI_NO_MATCH_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(PYI_NO_MATCH_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PYI_NO_MATCH_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnPYINoMatchPageIfFraudCriVCValidationReturnsFail() {
-        Map<String, String> input = Map.of(JOURNEY, FAIL, IPV_SESSION_ID, "1234");
+    void shouldReturnPYINoMatchPageIfFraudCriVCValidationReturnsFail() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, FAIL),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(CRI_FRAUD_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(PYI_NO_MATCH_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(PYI_NO_MATCH_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PYI_NO_MATCH_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnPYIKbvFailPageIfKbvCriVCValidationReturnsFail() {
-        Map<String, String> input = Map.of(JOURNEY, FAIL, IPV_SESSION_ID, "1234");
+    void shouldReturnPYIKbvFailPageIfKbvCriVCValidationReturnsFail() throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, FAIL),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(CRI_KBV_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(PYI_KBV_FAIL_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(PYI_KBV_FAIL_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PYI_KBV_FAIL_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnPyiNoMatchPageIfInSelectCRIStateAndRetursPyiNoMatchJourney() {
-        Map<String, String> input = Map.of(JOURNEY, PYI_NO_MATCH_PAGE, IPV_SESSION_ID, "1234");
+    void shouldReturnPyiNoMatchPageIfInSelectCRIStateAndRetursPyiNoMatchJourney()
+            throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, PYI_NO_MATCH_PAGE),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(SELECT_CRI_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(PYI_NO_MATCH_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals(PYI_NO_MATCH_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PYI_NO_MATCH_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnEvaluateGpg45ScoresJourneyIfInDcmawStateReturnsAccessDeniedResponse() {
-        Map<String, String> input = Map.of(JOURNEY, ACCESS_DENIED, IPV_SESSION_ID, "1234");
+    void shouldReturnEvaluateGpg45ScoresJourneyIfInDcmawStateReturnsAccessDeniedResponse()
+            throws IOException {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, ACCESS_DENIED),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         mockIpvSessionItemAndTimeout(CRI_DCMAW_STATE);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(EVALUATE_GPG45_SCORES, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals("/journey/evaluate-gpg45-scores", output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals("/journey/evaluate-gpg45-scores", outputBody.get("journey"));
     }
 
     @Test
-    void shouldReturnErrorPageIfSessionHasExpired() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnErrorPageIfSessionHasExpired() throws Exception {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         IpvSessionItem ipvSessionItem = new IpvSessionItem();
         ipvSessionItem.setIpvSessionId(SecureTokenHelper.generate());
@@ -579,7 +1028,13 @@ class ProcessJourneyStepHandlerTest {
         when(mockConfigurationService.getSsmParameter(BACKEND_SESSION_TIMEOUT)).thenReturn("99");
         when(mockIpvSessionService.getIpvSession("1234")).thenReturn(ipvSessionItem);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
@@ -592,12 +1047,20 @@ class ProcessJourneyStepHandlerTest {
                 OAuth2Error.ACCESS_DENIED.getDescription(),
                 capturedIpvSessionItem.getErrorDescription());
 
-        assertEquals(PYI_TECHNICAL_ERROR_PAGE, output.get("page"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals(PYI_TECHNICAL_ERROR_PAGE, outputBody.get("page"));
     }
 
     @Test
-    void shouldReturnSessionEndJourneyIfStateIsSessionTimeout() {
-        Map<String, String> input = Map.of(JOURNEY, NEXT, IPV_SESSION_ID, "1234");
+    void shouldReturnSessionEndJourneyIfStateIsSessionTimeout() throws Exception {
+        var input =
+                new ApiGatewayTemplateMappingInput(
+                        Map.of("input", "body"),
+                        Map.of("ipv-session-id", "1234"),
+                        Map.of(JOURNEY_STEP, NEXT),
+                        Collections.emptyMap());
+        InputStream inputStream = new ByteArrayInputStream(objectMapper.writeValueAsBytes(input));
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
 
         IpvSessionItem ipvSessionItem = new IpvSessionItem();
         ipvSessionItem.setIpvSessionId(SecureTokenHelper.generate());
@@ -608,14 +1071,21 @@ class ProcessJourneyStepHandlerTest {
         when(mockIpvSessionService.getIpvSession(anyString())).thenReturn(ipvSessionItem);
         when(mockIpvSessionService.getIpvSession("1234")).thenReturn(ipvSessionItem);
 
-        Map<String, Object> output = processJourneyStepHandler.handleRequest(input, mockContext);
+        processJourneyStepHandler.handleRequest(inputStream, outputStream, mockContext);
+
+        ApiGatewayTemplateMappingOutput lambdaOutput =
+                objectMapper.readValue(
+                        outputStream.toByteArray(), ApiGatewayTemplateMappingOutput.class);
+        Map<String, Object> outputBody =
+                objectMapper.readValue(lambdaOutput.getBody(), new TypeReference<>() {});
 
         ArgumentCaptor<IpvSessionItem> sessionArgumentCaptor =
                 ArgumentCaptor.forClass(IpvSessionItem.class);
         verify(mockIpvSessionService).updateIpvSession(sessionArgumentCaptor.capture());
         assertEquals(END_STATE, sessionArgumentCaptor.getValue().getUserState());
 
-        assertEquals("/journey/build-client-oauth-response", output.get("journey"));
+        assertEquals(200, lambdaOutput.getStatusCode());
+        assertEquals("/journey/build-client-oauth-response", outputBody.get("journey"));
     }
 
     private void mockIpvSessionItemAndTimeout(String validateOauthCallback) {
